<resources>
    <string name="app_name">Digital House Foods</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember-me</string>
    <string name="log_in">LOG IN</string>
    <string name="or">OR</string>
    <string name="login_with_facebook">LOGIN WITH FACEBOOK</string>
    <string name="register">REGISTER</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat password</string>
    <string name="save_profile">SAVE PROFILE</string>
    <string name="pratos_principais">Pratos Principais</string>
    <string name="nome_do_restaurante">Nome do Restaurante</string>
</resources>
