<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".login.LoginActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/checkBoxLoginRememberMe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remember_me" />

    <Button
        android:id="@+id/buttonLoginLogin"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF5353"
        android:padding="24dp"
        android:text="@string/log_in" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:background="#DFE5EC"
            android:focusable="false" />

        <TextView
            android:id="@+id/textViewLoginOr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.7"
            android:padding="16dp"
            android:text="@string/or" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:background="#DFE5EC"
            android:focusable="false" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonLoginFacebook"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#587BC2"
        android:drawableLeft="@drawable/icon_facebook"
        android:padding="24dp"
        android:text="@string/login_with_facebook"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/buttonLoginRegister"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#8593A7"
        android:padding="24dp"
        android:text="@string/register" />

</LinearLayout>